# cats_and_dogs

./: .pre-commit-config.yaml  README.md  dataset.dvc  infer.py  make_dataloader.py  pyproject.toml  train.py
.dvc/: config
configs/: config.yaml
dataset/: README.md
project notebook/: project.ipynb
