[tool.poetry]
name = "cats-and-dogs"
version = "0.1.0"
description = "Creating a neural network to distinguish between pictures of cats and dogs"
authors = ["nevolinaa <https://github.com/nevolinaa>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nevolinaa/cats_and_dogs"
keywords = ["python", "torch", "CV"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
torch = "^2.1.1"
torchvision = "^0.16.1"
opencv-python = "^4.8.1.78"
image = "^1.5.33"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
